# SmokeSim

./: .gitignore  CMakeLists.txt  README.md  main.c
2d/: graphics2d.c  graphics2d.h  graphics_objects2d.c  graphics_objects2d.h  grid2d.c  grid2d.h
3d/: camera3d.c  camera3d.h  graphics3d.c  graphics3d.h  graphics_objects3d.c  graphics_objects3d.h  grid3d.c  grid3d.h
common/: emitters.c  graphics.c  graphics.h  grid.c  grid.h  obstacles.c  opengl_bindings.h  physics.c  physics.h  shader.c  shader.h  texture.c  window.c  window.h
common/graphics/: glad.c  graphics.c  graphics.h  graphics_objects.h
common/gui/: gui.c  gui.h  main_menu.c  main_menu.h  nk_helpers.c  nk_helpers.h  nk_styles.c  nk_styles.h  text.c  text.h
common/physics/: emitters.c  emitters.h  grid.c  grid.h  obstacles.c  obstacles.h  physics.c  physics.h
common/util/: grid_parser.c  grid_parser.h  shader.c  shader.h  texture.h  window.c  window.h
common_shaders/graphics/text/: text_shader.frag  text_shader.vert
shaders2d/compute/: advect_smoke.comp  advect_vx.comp  advect_vy.comp  apply_buoyancy.comp  apply_vorticity_x.comp  apply_vorticity_y.comp  calculate_vorticity.comp  handle_emitters.comp  init_solid_map.comp  obstacle_update.comp  update_emitters_status.comp  update_solid_map.comp  update_vx.comp  update_vy.comp
shaders2d/compute/pressure_solve/: compute_residual.comp  prolong_pressure.comp  restrict_residual.comp  restrict_solid.comp  smooth.comp
shaders2d/graphics/: draw_grid_lines.frag  draw_grid_lines.vert  draw_obstacles.frag  draw_obstacles.vert  draw_smoke.frag  draw_smoke.vert  draw_velocities.frag  draw_velocities.vert  draw_vorticity.frag  draw_vorticity.vert
shaders3d/compute/: advect_smoke.comp  advect_temperature.comp  advect_vx.comp  advect_vy.comp  advect_vz.comp  apply_buoyancy.comp  apply_vorticity_x.comp  apply_vorticity_y.comp  apply_vorticity_z.comp  calculate_vorticity.comp  handle_emitters.comp  init_solid_map.comp  obstacle_update.comp  resolve_pressure.comp  update_emitters_status.comp  update_solid_map.comp  update_vx.comp  update_vy.comp  update_vz.comp
shaders3d/compute/pressure_solve/: compute_residual.comp  prolong_pressure.comp  restrict_residual.comp  restrict_solid.comp  smooth.comp
shaders3d/graphics/: direction_vectors.frag  direction_vectors.vert  draw_obstacles.frag  draw_obstacles.vert  draw_vorticity.frag  draw_vorticity.vert  grid_lines.frag  grid_lines.vert  ray_march_smoke.frag  ray_march_smoke.vert  velocity_arrows.frag  velocity_arrows.vert
